* Author: Mike FABIAN <mfabian@redhat.com>
* 08 Dec 2016 Released 1.5.15 version
* Default value for self._show_status_info_in_auxiliary_text should be True
* Don’t use keyword arguments when instantiating IBus.LookupTable()
* Add an option to choose the orientation of the lookup table
* Update translations from zanata (de, pl, and uk updated)
* Update emojione.json

* Author: Mike FABIAN <mfabian@redhat.com>
* 25 Nov 2016 Released 1.5.14 version
* Reopen preëdit not only on Backspace but also on Delete and arrow keys
* Fix "delete whitespace when committing punctuation" problem in firefox (Resolves rhbz#1399192)
* Add pt_BR translations from zanata. Update uk, pl, and de translations from zanata.
* Add an option to show/hide the status information in the auxiliary text
* Use ballot box characters in front of the mode indicators in the auxiliary text

* Author: Mike FABIAN <mfabian@redhat.com>
* 20 Nov 2016 Released 1.5.13 version
* Update French translations from zanata

* Author: Mike FABIAN <mfabian@redhat.com>
* 19 Nov 2016 Released 1.5.12 version
* Display existing shortcuts and make it possible to delete them
* Update translations from zanata (de, pl, uk)

* Author: Mike FABIAN <mfabian@redhat.com>
* 17 Nov 2016 Released 1.5.11 version
* Add feature to define custom shortcuts
* Merge editor and tabengine classes

* Author: Mike FABIAN <mfabian@redhat.com>
* 09 Nov 2016 Released 1.5.10 version
* Make accent insensitive matching also work in the user database
* Add test cases for accent insensitive matching
* Add 'No' (Number, Other) to VALID_CATEGORIES to be able to match ¹ U+00B9 SUPERSCRIPT ONE

* Author: Mike FABIAN <mfabian@redhat.com>
* 24 Oct 2016 Released 1.5.9 version
* Make it possible to use a database in different locations than the default
* Clear candidate list as well when clearing the lookup table
* Add missing CLDR xml files to tar ball
* Add unit tests

* Author: Mike FABIAN <mfabian@redhat.com>
* 10 Oct 2016 Released 1.5.8 version