@@ -16,6 +16,37 @@
   <url type="bugtracker">https://github.com/mike-fabian/ibus-typing-booster/issues</url>
   <url type="help">https://mike-fabian.github.io/ibus-typing-booster/documentation.html</url>
   <releases>
+    <release version="1.5.16" date="2017-01-10" urgency="medium">
+      <description>
+        <ul>
+          <li>
+            Skip Korean test case also on Arch
+          </li>
+          <li>
+            Remove everything following a tab (including the tab) from
+            hunspell dictionary lines (Resolves: rhbz#1411659)
+          </li>
+          <li>
+            Delete a candidate correctly from the user database even
+            if it starts with a prefix to be stripped from tokens
+            (Resolves: rhbz#1411676)
+          </li>
+          <li>
+            Trigger emoji lookup when the input starts or ends with
+            '_' or ' '
+          </li>
+          <li>
+            Better handling of BackSpace and Delete when reaching the
+            ends of the preëdit (Resolves: rhbz#1411688)
+          </li>
+          <li>
+            Search for hunspell dictionaries in a list of directories
+            (Resolves:
+            https://github.com/mike-fabian/ibus-typing-booster/issues/6)
+          </li>
+        </ul>
+      </description>
+    </release>
     <release version="1.5.15" date="2016-12-08" urgency="medium">
       <description>
         <ul>
